# csv_analysis

./: README.md  app.py  pyproject.toml  quick_start.py  requirements.txt  run_tests.py  sample_data.csv
csvi/: __init__.py  bench.py  cli.py  io_utils.py  logging_conf.py  plan_runner.py  report_runner.py  stats_utils.py  time_utils.py
outputs/reports/: auto_analysis_20250902_185305.md
prompts/: system.csv_analyst.txt
services/: analysis.py  executor.py  ollama_client.py  plots.py
tests/: __init__.py  test_analysis.py  test_bench_small.py  test_executor.py  test_fuzz.py  test_plan_runner.py  test_property.py  test_report_runner.py
